# try_neetcode

./: README.md  note_progress.md  word_list.md
neet_code_150/: Cargo.toml  README.md  tmp.toml
neet_code_150/src/advanced_graphs/: cheapest_flights_k_stops.rs  min_const_to_connect_all_points.rs  network_delay_time.rs  reconstruct_itinerary.rs  swim_in_rising_water.rs
neet_code_150/src/appendix/: all.rs  bin_heap.rs  closed_paren.rs  fold.rs  from_iter.rs  hash_map.rs  impl_list.rs  join.rs  keta.rs  max_except_self.rs  nabeatu.rs  prime_number.rs  repeat.rs  skip_while.rs  sort.rs  vec_deque.rs  while_let.rs
neet_code_150/src/array_hash/: contains_duplicate.rs  group_anagram.rs  longest_consecutive_sequence.rs  product_of_array_except_self.rs  top_k_freq.rs  two_sum.rs  valid_anagram.rs  valid_sudoku.rs
neet_code_150/src/backtracking/: combination_sum.rs  combination_sum_2.rs  letter_combinations_phone_number.rs  n_queens.rs  palindrome_partitioning.rs  permutations.rs  subsets.rs  subsets_2.rs  word_search.rs
neet_code_150/src/binary_search/: bin_search.rs  koko_banana.rs  median_of_two_sorted_array.rs  minimum_rotated_sorted_array.rs  search_2dmatrix.rs  search_rotated_sorted_array.rs  timebase_key.rs
neet_code_150/src/bit_manipulation/: counting_bits.rs  missing_number.rs  number_of_1bit.rs  reverse_bits.rs  reverse_integer.rs  single_number.rs  sum_of_two_integers.rs
neet_code_150/src/graphs/: course_schedule.rs  course_schedule_2.rs  max_area_of_island.rs  number_of_island.rs  pacific_atlantic_water_flow.rs  redundant_connection.rs  rotting_orange.rs  surrounded_regions.rs  word_ladder.rs
neet_code_150/src/greedy/: gas_station.rs  hand_of_straight.rs  jump_game.rs  jump_game_2.rs  max_subarray.rs  merge_triplet.rs  partition_label.rs  valid_paren.rs
neet_code_150/src/heap_p_queue/: design_twitter.rs  find_median_from_data_stream.rs  k_closest_point_to_origin.rs  kth_largest_element_array.rs  kth_largest_element_in_stream.rs  last_stone_weight.rs  task_scheduler.rs
neet_code_150/src/intervals/: insert_interval.rs  merge_intervals.rs  min_interval_to_include_each_query.rs  non_overlapping_intervals.rs
neet_code_150/src/linked_list/: merge_sorted_list.rs  rev_list.rs
neet_code_150/src/math_and_geometry/: detect_square.rs  happy_number.rs  mul_str.rs  plus_one.rs  pow.rs  rot_img.rs  set_zero.rs  spiral_matrix.rs
neet_code_150/src/one_d_dp/: climbing_stair.rs  climbing_stair_cost.rs  coin_change.rs  decode_ways.rs  house_robber.rs  house_robber_2.rs  longest_inc_subseq.rs  longest_palindromic_substr.rs  max_prod_subarray.rs  palindromic_substr.rs  partition_eq_subset.rs  word_break.rs
neet_code_150/src/sliding_window/: best_time_buy_sell.rs  longest_repeating_char.rs  longest_substring_no_repeat.rs  minimum_window_substr.rs  permutation_in_str.rs  sliding_window_max.rs
neet_code_150/src/stack/: car_fleet.rs  daily_tmp.rs  gen_par.rs  largest_rectangle_in_hist.rs  min_stack.rs  rev_polish.rs  valid_par.rs
neet_code_150/src/trees/: blanced_binary_tree.rs  diameter_binary_tree.rs  invert_binary_tree.rs  max_depth_binary_tree.rs  same_tree.rs  subtree_of_another_tree.rs
neet_code_150/src/two_d_dp/: best_time_buy_sell_cooldown.rs  coin_change_2.rs  longest_common_subseq.rs  unique_path.rs
neet_code_150/src/two_pointers/: continer_with_most_water.rs  trapping_rain_water.rs  tree_sum.rs  two_sum_2.rs  valid_palindrome.rs
neet_code_all/: Cargo.toml  README.md  tmp.toml
neet_code_all/src/array_hash/: best_time_to_buy_and_sell_2.rs  brick_wall.rs  can_place_flowers.rs  concatenation_of_array.rs  continuous_subarray_sum.rs  design_hashmap.rs  design_hashset.rs  design_parking_system.rs  encode_and_decode_tinyurl.rs  find_all_anagrams_in_string.rs  find_all_numbers_disappeared_in_array.rs  find_difference_of_two_arrays.rs  find_index_of_first_occurrence_string.rs  find_pivot_index.rs  first_missing_positive.rs  grid_game.rs  insert_delete_get_random.rs  is_subsequence.rs  isomorphic_strings.rs  largest_number.rs  len_of_last_word.rs  longest_common_prefix.rs  majority_element.rs  max_number_of_ballons.rs  max_product_of_two_substr.rs  min_num_of_swaps.rs  minimum_penalty_for_shop.rs  naming_a_company.rs  next_greater_element_1.rs  non_decreasing_array.rs  num_of_interchangeable_rectangle.rs  number_of_zero_filled_subarray.rs  optimal_partition_of_string.rs  pascal_triangle.rs  push_dominoes.rs  range_sum_query_2d.rs  range_sum_query_immutable.rs  remove_element.rs  repeated_dna_sequences.rs  replace_elements_with_greatest_right.rs  (+9 more)
neet_code_all/src/bin_search/: arranging_coins.rs  capacity_to_ship_pkg_within_days.rs  find_first_and_last_in_sorted_array.rs  find_peak_element.rs  guess_number_higher_lower.rs  minimize_max_diff_of_pairs.rs  search_in_rotated_sorted_array_2.rs  search_insert_position.rs  single_element_in_sorted_array.rs  sq_of_sorted_array.rs  sqrt_x.rs  successful_pairs_spell_potion.rs  valid_perfect_square.rs
neet_code_all/src/bit_manipulation/: add_binary.rs  add_to_array_form_of_int.rs  shuffle_the_array.rs
neet_code_all/src/graphs/: count_sub_islands.rs  island_perimeter.rs  open_the_lock.rs  reorder_routes_to_city_zero.rs  snakes_and_ladders.rs  verify_alien_dict.rs
neet_code_all/src/math_and_geometry/: count_odd_number_in_interval.rs  excel_sheet_column_title.rs  find_missing_observations.rs  greatest_common_divisor_of_string.rs  integer_to_roman.rs  matrix_diagonal_sum.rs  max_points_on_line.rs  palindrome_number.rs  robot_bounded_in_circle.rs  roman_to_integer.rs  shift_2d_grid.rs  spiral_matrix_2.rs  ugly_number.rs  zigzag_conversion.rs
neet_code_all/src/sliding_window/: contain_duplicate_2.rs  find_k_closest_element.rs  freq_of_most_frequent_element.rs  fruits_into_basket.rs  max_num_of_vowels_k.rs  min_number_of_flip_to_make_alternative.rs  min_size_subarray_sum.rs  minimum_operations_to_reduce_x_to_zero.rs  num_of_subarray_size_k_avg_threshold.rs
neet_code_all/src/stack/: 132_pattern.rs  asteroid_collision.rs  baseball_game.rs  decode_string.rs  implement_stack_using_queues.rs  (+6 more)
notes/impl_rust/: Cargo.toml
(+330 files in other folders)
