[package]
name = "neet_code_150"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## Arrays & Hashing 
[[bin]]
name = "contains_duplicate"
path = "src/array_hash/contains_duplicate.rs"

[[bin]]
name = "valid_anagram"
path = "src/array_hash/valid_anagram.rs"

[[bin]]
name = "two_sum"
path = "src/array_hash/two_sum.rs"

[[bin]]
name = "group_anagram"
path = "src/array_hash/group_anagram.rs"

[[bin]]
name = "top_k_freq"
path = "src/array_hash/top_k_freq.rs"

[[bin]]
name = "prod_array_except"
path = "src/array_hash/product_of_array_except_self.rs"

[[bin]]
name = "valid_sudoku"
path = "src/array_hash/valid_sudoku.rs"

[[bin]]
name = "longest_consecutive"
path = "src/array_hash/longest_consecutive_sequence.rs"

## Two & Pointers 
[[bin]]
name = "valid_palindrome"
path = "src/two_pointers/valid_palindrome.rs"

[[bin]]
name = "two_sum_2"
path = "src/two_pointers/two_sum_2.rs"

[[bin]]
name = "tree_sum"
path = "src/two_pointers/tree_sum.rs"

[[bin]]
name = "continer_water"
path = "src/two_pointers/continer_with_most_water.rs"

## Sliding Window
[[bin]]
name = "buy_sell"
path = "src/sliding_window/best_time_buy_sell.rs" 

[[bin]]
name = "longest_substr"
path = "src/sliding_window/longest_substring_no_repeat.rs"

[[bin]]
name = "longest_repeating"
path = "src/sliding_window/longest_repeating_char.rs"

[[bin]]
name = "permutation_str"
path = "src/sliding_window/permutation_in_str.rs"

## Stack
[[bin]]
name = "valid_par"
path = "src/stack/valid_par.rs"

[[bin]]
name = "min_stack"
path = "src/stack/min_stack.rs"

[[bin]]
name = "rev_polish"
path = "src/stack/rev_polish.rs"

[[bin]]
name = "gen_par"
path = "src/stack/gen_par.rs"

[[bin]]
name = "daily_tmp"
path = "src/stack/daily_tmp.rs"

[[bin]]
name = "car_fleet"
path = "src/stack/car_fleet.rs"

## Binary Search
[[bin]]
name = "bin_search"
path = "src/binary_search/bin_search.rs"

[[bin]]
name = "search_2dmat"
path = "src/binary_search/search_2dmatrix.rs"

[[bin]]
name = "koko_banana"
path = "src/binary_search/koko_banana.rs"

[[bin]]
name = "sorted_rot"
path = "src/binary_search/minimum_rotated_sorted_array.rs"

[[bin]]
name = "sorted_rot_search"
path = "src/binary_search/search_rotated_sorted_array.rs"

[[bin]]
name = "timebase_key"
path = "src/binary_search/timebase_key.rs"

## Linked List

[[bin]]
name = "rev_list"
path = "src/linked_list/rev_list.rs"

[[bin]]
name = "merge_sorted_list"
path = "src/linked_list/merge_sorted_list.rs"

## Backtracking

[[bin]]
name = "combination_sum"
path = "src/backtracking/combination_sum.rs"

[[bin]]
name = "word_search"
path = "src/backtracking/word_search.rs"

## Graphs

[[bin]]
name = "number_of_island"
path = "src/graphs/number_of_island.rs"

[[bin]]
name = "pacific_atlantic_water_flow"
path = "src/graphs/pacific_atlantic_water_flow.rs"

[[bin]]
name = "course_schedule"
path = "src/graphs/course_schedule.rs"

## 1-D Dynamic Programming

[[bin]]
name = "climbing_stair"
path = "src/one_d_dp/climbing_stair.rs"

[[bin]]
name = "climbing_stair_cost"
path = "src/one_d_dp/climbing_stair_cost.rs"

[[bin]]
name = "house_robber"
path = "src/one_d_dp/house_robber.rs"

[[bin]]
name = "house_robber_2"
path = "src/one_d_dp/house_robber_2.rs"

[[bin]]
name = "longest_palindromic_substr"
path = "src/one_d_dp/longest_palindromic_substr.rs"

[[bin]]
name = "palindromic_substr"
path = "src/one_d_dp/palindromic_substr.rs"

[[bin]]
name = "decode_ways"
path = "src/one_d_dp/decode_ways.rs"

[[bin]]
name = "coin_change"
path = "src/one_d_dp/coin_change.rs"

[[bin]]
name = "max_prod_subarray"
path = "src/one_d_dp/max_prod_subarray.rs"

[[bin]]
name = "word_break"
path = "src/one_d_dp/word_break.rs"

[[bin]]
name = "longest_inc_subseq"
path = "src/one_d_dp/longest_inc_subseq.rs"

[[bin]]
name = "partition_eq_subset"
path = "src/one_d_dp/partition_eq_subset.rs"

## 2-D Dynamic Programming
[[bin]]
name = "unique_path"
path = "src/two_d_dp/unique_path.rs"

[[bin]]
name = "longest_common_subseq"
path = "src/two_d_dp/longest_common_subseq.rs"

[[bin]]
name = "best_time_buy_sell_cooldown"
path = "src/two_d_dp/best_time_buy_sell_cooldown.rs"

[[bin]]
name = "coin_change_2"
path = "src/two_d_dp/coin_change_2.rs"

## Greedy
[[bin]]
name = "max_subarray"
path = "src/greedy/max_subarray.rs"

[[bin]]
name = "jmp_game"
path = "src/greedy/jump_game.rs"

[[bin]]
name = "jmp_game2"
path = "src/greedy/jump_game_2.rs"

[[bin]]
name = "gas_station"
path = "src/greedy/gas_station.rs"

[[bin]]
name = "hand_of_straight"
path = "src/greedy/hand_of_straight.rs"

[[bin]]
name = "merge_triplet"
path = "src/greedy/merge_triplet.rs"

[[bin]]
name = "partition_label"
path = "src/greedy/partition_label.rs"

[[bin]]
name = "valid_paren"
path = "src/greedy/valid_paren.rs"

## Math & Geometry
[[bin]]
name = "rot_image"
path = "src/math_and_geometry/rot_img.rs"

[[bin]]
name = "spiral_mat"
path = "src/math_and_geometry/spiral_matrix.rs"

[[bin]]
name = "set_zero"
path = "src/math_and_geometry/set_zero.rs"

[[bin]]
name = "happy_number"
path = "src/math_and_geometry/happy_number.rs"

[[bin]]
name = "plus_one"
path = "src/math_and_geometry/plus_one.rs"

[[bin]]
name = "pow"
path = "src/math_and_geometry/pow.rs"

[[bin]]
name = "mul_str"
path = "src/math_and_geometry/mul_str.rs"

[[bin]]
name = "detect_square"
path = "src/math_and_geometry/detect_square.rs"

## Bit Manipulation

[[bin]]
name = "single_number"
path = "src/bit_manipulation/single_number.rs"

[[bin]]
name = "number_of_1bit"
path = "src/bit_manipulation/number_of_1bit.rs"

[[bin]]
name = "counting_bits"
path = "src/bit_manipulation/counting_bits.rs"

[[bin]]
name = "reverse_bits"
path = "src/bit_manipulation/reverse_bits.rs"

[[bin]]
name = "missing_number"
path = "src/bit_manipulation/missing_number.rs"

[[bin]]
name = "sum_of_two_integers"
path = "src/bit_manipulation/sum_of_two_integers.rs"


[[bin]]
name = "reverse_integer"
path = "src/bit_manipulation/reverse_integer.rs"

# appendix
[[bin]]
name = "hash_map"
path = "src/appendix/hash_map.rs"

[[bin]]
name = "impl_list"
path = "src/appendix/impl_list.rs"

[[bin]]
name = "max_except_self"
path = "src/appendix/max_except_self.rs"

[dependencies]
