[package]
name = "neet_code_150"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## Arrays & Hashing
[[bin]]
name = "contains_duplicate"
path = "src/array_hash/contains_duplicate.rs"

[[bin]]
name = "valid_anagram"
path = "src/array_hash/valid_anagram.rs"

[[bin]]
name = "two_sum"
path = "src/array_hash/two_sum.rs"

[[bin]]
name = "group_anagram"
path = "src/array_hash/group_anagram.rs"

[[bin]]
name = "top_k_freq"
path = "src/array_hash/top_k_freq.rs"

[[bin]]
name = "prod_array_except"
path = "src/array_hash/product_of_array_except_self.rs"

[[bin]]
name = "valid_sudoku"
path = "src/array_hash/valid_sudoku.rs"

[[bin]]
name = "longest_consecutive"
path = "src/array_hash/longest_consecutive_sequence.rs"

## Two & Pointers
[[bin]]
name = "valid_palindrome"
path = "src/two_pointers/valid_palindrome.rs"

[[bin]]
name = "two_sum_2"
path = "src/two_pointers/two_sum_2.rs"

[[bin]]
name = "tree_sum"
path = "src/two_pointers/tree_sum.rs"

[[bin]]
name = "continer_water"
path = "src/two_pointers/continer_with_most_water.rs"

[[bin]]
name = "trapping_rain_water"
path = "src/two_pointers/trapping_rain_water.rs"

## Sliding Window
[[bin]]
name = "buy_sell"
path = "src/sliding_window/best_time_buy_sell.rs"

[[bin]]
name = "longest_substr_no_repeat"
path = "src/sliding_window/longest_substring_no_repeat.rs"

[[bin]]
name = "longest_repeating"
path = "src/sliding_window/longest_repeating_char.rs"

[[bin]]
name = "permutation_str"
path = "src/sliding_window/permutation_in_str.rs"

[[bin]]
name = "minimum_window_substr"
path = "src/sliding_window/minimum_window_substr.rs"

[[bin]]
name = "sliding_window_max"
path = "src/sliding_window/sliding_window_max.rs"

## Stack
[[bin]]
name = "valid_par"
path = "src/stack/valid_par.rs"

[[bin]]
name = "min_stack"
path = "src/stack/min_stack.rs"

[[bin]]
name = "rev_polish"
path = "src/stack/rev_polish.rs"

[[bin]]
name = "gen_par"
path = "src/stack/gen_par.rs"

[[bin]]
name = "daily_tmp"
path = "src/stack/daily_tmp.rs"

[[bin]]
name = "car_fleet"
path = "src/stack/car_fleet.rs"

[[bin]]
name = "largest_rectangle_in_hist"
path = "src/stack/largest_rectangle_in_hist.rs"

## Binary Search
[[bin]]
name = "bin_search"
path = "src/binary_search/bin_search.rs"

[[bin]]
name = "search_2dmat"
path = "src/binary_search/search_2dmatrix.rs"

[[bin]]
name = "koko_banana"
path = "src/binary_search/koko_banana.rs"

[[bin]]
name = "sorted_rot"
path = "src/binary_search/minimum_rotated_sorted_array.rs"

[[bin]]
name = "sorted_rot_search"
path = "src/binary_search/search_rotated_sorted_array.rs"

[[bin]]
name = "timebase_key"
path = "src/binary_search/timebase_key.rs"

[[bin]]
name = "median_of_two_sorted_array"
path = "src/binary_search/median_of_two_sorted_array.rs"

## Linked List

[[bin]]
name = "rev_list"
path = "src/linked_list/rev_list.rs"

[[bin]]
name = "merge_sorted_list"
path = "src/linked_list/merge_sorted_list.rs"

## Trees

[[bin]]
name = "invert_binary_tree"
path = "src/trees/invert_binary_tree.rs"

[[bin]]
name = "max_depth_binary_tree"
path = "src/trees/max_depth_binary_tree.rs"

[[bin]]
name = "diameter_binary_tree"
path = "src/trees/diameter_binary_tree.rs"

[[bin]]
name = "blanced_binary_tree"
path = "src/trees/blanced_binary_tree.rs"

[[bin]]
name = "same_tree"
path = "src/trees/same_tree.rs"

## Heap / Priority Queue

[[bin]]
name = "kth_largest_element_in_stream"
path = "src/heap_p_queue/kth_largest_element_in_stream.rs"

[[bin]]
name = "last_stone_weight"
path = "src/heap_p_queue/last_stone_weight.rs"

[[bin]]
name = "k_closest_point_to_origin"
path = "src/heap_p_queue/k_closest_point_to_origin.rs"

[[bin]]
name = "kth_largest_element_array"
path = "src/heap_p_queue/kth_largest_element_array.rs"

[[bin]]
name = "task_scheduler"
path = "src/heap_p_queue/task_scheduler.rs"

[[bin]]
name = "design_twitter"
path = "src/heap_p_queue/design_twitter.rs"

[[bin]]
name = "find_median_from_data_stream"
path = "src/heap_p_queue/find_median_from_data_stream.rs"

## Backtracking

[[bin]]
name = "subsets"
path = "src/backtracking/subsets.rs"

[[bin]]
name = "combination_sum"
path = "src/backtracking/combination_sum.rs"

[[bin]]
name = "permutations"
path = "src/backtracking/permutations.rs"

[[bin]]
name = "subsets_2"
path = "src/backtracking/subsets_2.rs"

[[bin]]
name = "combination_sum_2"
path = "src/backtracking/combination_sum_2.rs"

[[bin]]
name = "word_search"
path = "src/backtracking/word_search.rs"

[[bin]]
name = "palindrome_partitioning"
path = "src/backtracking/palindrome_partitioning.rs"

[[bin]]
name = "letter_combinations_phone_number"
path = "src/backtracking/letter_combinations_phone_number.rs"

[[bin]]
name = "n_queens"
path = "src/backtracking/n_queens.rs"

## Graphs

[[bin]]
name = "number_of_island"
path = "src/graphs/number_of_island.rs"

[[bin]]
name = "max_area_of_island"
path = "src/graphs/max_area_of_island.rs"

[[bin]]
name = "pacific_atlantic_water_flow"
path = "src/graphs/pacific_atlantic_water_flow.rs"

[[bin]]
name = "surrounded_regions"
path = "src/graphs/surrounded_regions.rs"

[[bin]]
name = "rotting_orange"
path = "src/graphs/rotting_orange.rs"

[[bin]]
name = "course_schedule"
path = "src/graphs/course_schedule.rs"

[[bin]]
name = "course_schedule_2"
path = "src/graphs/course_schedule_2.rs"

[[bin]]
name = "redundant_connection"
path = "src/graphs/redundant_connection.rs"

[[bin]]
name = "word_ladder"
path = "src/graphs/word_ladder.rs"

## Advanced Graphs

[[bin]]
name = "reconstruct_itinerary"
path = "src/advanced_graphs/reconstruct_itinerary.rs"

[[bin]]
name = "min_const_to_connect_all_points"
path = "src/advanced_graphs/min_const_to_connect_all_points.rs"

[[bin]]
name = "network_delay_time"
path = "src/advanced_graphs/network_delay_time.rs"

[[bin]]
name = "swim_in_rising_water"
path = "src/advanced_graphs/swim_in_rising_water.rs"

[[bin]]
name = "cheapest_flights_k_stops"
path = "src/advanced_graphs/cheapest_flights_k_stops.rs"

## 1-D Dynamic Programming

[[bin]]
name = "climbing_stair"
path = "src/one_d_dp/climbing_stair.rs"

[[bin]]
name = "climbing_stair_cost"
path = "src/one_d_dp/climbing_stair_cost.rs"

[[bin]]
name = "house_robber"
path = "src/one_d_dp/house_robber.rs"

[[bin]]
name = "house_robber_2"
path = "src/one_d_dp/house_robber_2.rs"

[[bin]]
name = "longest_palindromic_substr"
path = "src/one_d_dp/longest_palindromic_substr.rs"

[[bin]]
name = "palindromic_substr"
path = "src/one_d_dp/palindromic_substr.rs"

[[bin]]
name = "decode_ways"
path = "src/one_d_dp/decode_ways.rs"

[[bin]]
name = "coin_change"
path = "src/one_d_dp/coin_change.rs"

[[bin]]
name = "max_prod_subarray"
path = "src/one_d_dp/max_prod_subarray.rs"

[[bin]]
name = "word_break"
path = "src/one_d_dp/word_break.rs"

[[bin]]
name = "longest_inc_subseq"
path = "src/one_d_dp/longest_inc_subseq.rs"

[[bin]]
name = "partition_eq_subset"
path = "src/one_d_dp/partition_eq_subset.rs"

## 2-D Dynamic Programming
[[bin]]
name = "unique_path"
path = "src/two_d_dp/unique_path.rs"

[[bin]]
name = "longest_common_subseq"
path = "src/two_d_dp/longest_common_subseq.rs"

[[bin]]
name = "best_time_buy_sell_cooldown"
path = "src/two_d_dp/best_time_buy_sell_cooldown.rs"

[[bin]]
name = "coin_change_2"
path = "src/two_d_dp/coin_change_2.rs"

## Greedy
[[bin]]
name = "max_subarray"
path = "src/greedy/max_subarray.rs"

[[bin]]
name = "jmp_game"
path = "src/greedy/jump_game.rs"

[[bin]]
name = "jmp_game2"
path = "src/greedy/jump_game_2.rs"

[[bin]]
name = "gas_station"
path = "src/greedy/gas_station.rs"

[[bin]]
name = "hand_of_straight"
path = "src/greedy/hand_of_straight.rs"

[[bin]]
name = "merge_triplet"
path = "src/greedy/merge_triplet.rs"

[[bin]]
name = "partition_label"
path = "src/greedy/partition_label.rs"

[[bin]]
name = "valid_paren"
path = "src/greedy/valid_paren.rs"

## Intervals
[[bin]]
name = "insert_interval"
path = "src/intervals/insert_interval.rs"

[[bin]]
name = "merge_intervals"
path = "src/intervals/merge_intervals.rs"

[[bin]]
name = "non_overlapping_intervals"
path = "src/intervals/non_overlapping_intervals.rs"

[[bin]]
name = "min_interval_to_include_each_query"
path = "src/intervals/min_interval_to_include_each_query.rs"

## Math & Geometry
[[bin]]
name = "rot_image"
path = "src/math_and_geometry/rot_img.rs"

[[bin]]
name = "spiral_mat"
path = "src/math_and_geometry/spiral_matrix.rs"

[[bin]]
name = "set_zero"
path = "src/math_and_geometry/set_zero.rs"

[[bin]]
name = "happy_number"
path = "src/math_and_geometry/happy_number.rs"

[[bin]]
name = "plus_one"
path = "src/math_and_geometry/plus_one.rs"

[[bin]]
name = "pow"
path = "src/math_and_geometry/pow.rs"

[[bin]]
name = "mul_str"
path = "src/math_and_geometry/mul_str.rs"

[[bin]]
name = "detect_square"
path = "src/math_and_geometry/detect_square.rs"

## Bit Manipulation

[[bin]]
name = "single_number"
path = "src/bit_manipulation/single_number.rs"

[[bin]]
name = "number_of_1bit"
path = "src/bit_manipulation/number_of_1bit.rs"

[[bin]]
name = "counting_bits"
path = "src/bit_manipulation/counting_bits.rs"

[[bin]]
name = "reverse_bits"
path = "src/bit_manipulation/reverse_bits.rs"

[[bin]]
name = "missing_number"
path = "src/bit_manipulation/missing_number.rs"

[[bin]]
name = "sum_of_two_integers"
path = "src/bit_manipulation/sum_of_two_integers.rs"


[[bin]]
name = "reverse_integer"
path = "src/bit_manipulation/reverse_integer.rs"

# appendix
[[bin]]
name = "hash_map"
path = "src/appendix/hash_map.rs"

[[bin]]
name = "impl_list"
path = "src/appendix/impl_list.rs"

[[bin]]
name = "max_except_self"
path = "src/appendix/max_except_self.rs"

[[bin]]
name = "nabeatu"
path = "src/appendix/nabeatu.rs"

[[bin]]
name = "from_iter"
path = "src/appendix/from_iter.rs"

[[bin]]
name = "bin_heap"
path = "src/appendix/bin_heap.rs"

[[bin]]
name = "vec_deque"
path = "src/appendix/vec_deque.rs"

[[bin]]
name = "while_let"
path = "src/appendix/while_let.rs"

[[bin]]
name = "fold"
path = "src/appendix/fold.rs"

[[bin]]
name = "sort"
path = "src/appendix/sort.rs"

[[bin]]
name = "prime_number"
path = "src/appendix/prime_number.rs"

[[bin]]
name = "all"
path = "src/appendix/all.rs"

[[bin]]
name = "repeat"
path = "src/appendix/repeat.rs"

[[bin]]
name = "join"
path = "src/appendix/join.rs"

[[bin]]
name = "skip_while"
path = "src/appendix/skip_while.rs"

[[bin]]
name = "closed_paren"
path = "src/appendix/closed_paren.rs"

[[bin]]
name = "keta"
path = "src/appendix/keta.rs"

[dependencies]
