[package]
name = "neet_code_all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## Array & Hashing

[[bin]]
name = "concatenation_of_array"
path = "src/array_hash/concatenation_of_array.rs"

[[bin]]
name = "replace_elements_with_greatest_right"
path = "src/array_hash/replace_elements_with_greatest_right.rs"

[[bin]]
name = "is_subsequence"
path = "src/array_hash/is_subsequence.rs"

[[bin]]
name = "len_of_last_word"
path = "src/array_hash/len_of_last_word.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/array_hash/longest_common_prefix.rs"

[[bin]]
name = "pascal_triangle"
path = "src/array_hash/pascal_triangle.rs"

[[bin]]
name = "remove_element"
path = "src/array_hash/remove_element.rs"

[[bin]]
name = "unique_email_address"
path = "src/array_hash/unique_email_address.rs"

[[bin]]
name = "isomorphic_strings"
path = "src/array_hash/isomorphic_strings.rs"

[[bin]]
name = "can_place_flowers"
path = "src/array_hash/can_place_flowers.rs"

[[bin]]
name = "majority_element"
path = "src/array_hash/majority_element.rs"

[[bin]]
name = "next_greater_element_1"
path = "src/array_hash/next_greater_element_1.rs"

[[bin]]
name = "find_pivot_index"
path = "src/array_hash/find_pivot_index.rs"

[[bin]]
name = "range_sum_query_immutable"
path = "src/array_hash/range_sum_query_immutable.rs"

[[bin]]
name = "find_all_numbers_disappeared_in_array"
path = "src/array_hash/find_all_numbers_disappeared_in_array.rs"

[[bin]]
name = "max_number_of_ballons"
path = "src/array_hash/max_number_of_ballons.rs"

[[bin]]
name = "word_pattern"
path = "src/array_hash/word_pattern.rs"

[[bin]]
name = "design_hashset"
path = "src/array_hash/design_hashset.rs"

[[bin]]
name = "design_hashmap"
path = "src/array_hash/design_hashmap.rs"

[[bin]]
name = "sort_array"
path = "src/array_hash/sort_array.rs"

[[bin]]
name = "sort_colors"
path = "src/array_hash/sort_colors.rs"

[[bin]]
name = "brick_wall"
path = "src/array_hash/brick_wall.rs"

[[bin]]
name = "best_time_to_buy_and_sell_2"
path = "src/array_hash/best_time_to_buy_and_sell_2.rs"

[[bin]]
name = "subarray_sum_eq_k"
path = "src/array_hash/subarray_sum_eq_k.rs"

[[bin]]
name = "unique_len_3_palindromic_substr"
path = "src/array_hash/unique_len_3_palindromic_substr.rs"

[[bin]]
name = "min_num_of_swaps"
path = "src/array_hash/min_num_of_swaps.rs"

[[bin]]
name = "num_of_interchangeable_rectangle"
path = "src/array_hash/num_of_interchangeable_rectangle.rs"

[[bin]]
name = "max_product_of_two_substr"
path = "src/array_hash/max_product_of_two_substr.rs"

## Two Pointers 

[[bin]]
name = "valid_palindrome_2"
path = "src/two_pointers/valid_palindrome_2.rs"

[[bin]]
name = "min_diff_highest_lowest_k_score"
path = "src/two_pointers/min_diff_highest_lowest_k_score.rs"

[[bin]]
name = "merge_strings_alternately"
path = "src/two_pointers/merge_strings_alternately.rs"

[[bin]]
name = "reverse_string"
path = "src/two_pointers/reverse_string.rs"

[[bin]]
name = "merge_sorted_array"
path = "src/two_pointers/merge_sorted_array.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array"
path = "src/two_pointers/remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "move_zeroes"
path = "src/two_pointers/move_zeroes.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array_2"
path = "src/two_pointers/remove_duplicates_from_sorted_array_2.rs"

[[bin]]
name = "four_sum"
path = "src/two_pointers/four_sum.rs"

[[bin]]
name = "number_of_sub_sequences"
path = "src/two_pointers/number_of_sub_sequences.rs"

[[bin]]
name = "rotate_array"
path = "src/two_pointers/rotate_array.rs"

[[bin]]
name = "boats_to_save_people"
path = "src/two_pointers/boats_to_save_people.rs"

## Sliding Window

[[bin]]
name = "contain_duplicate_2"
path = "src/sliding_window/contain_duplicate_2.rs"

[[bin]]
name = "num_of_subarray_size_k_avg_threshold"
path = "src/sliding_window/num_of_subarray_size_k_avg_threshold.rs"

[[bin]]
name = "freq_of_most_frequent_element"
path = "src/sliding_window/freq_of_most_frequent_element.rs"

[[bin]]
name = "fruits_into_basket"
path = "src/sliding_window/fruits_into_basket.rs"

[[bin]]
name = "max_num_of_vowels_k"
path = "src/sliding_window/max_num_of_vowels_k.rs"

[[bin]]
name = "min_size_subarray_sum"
path = "src/sliding_window/min_size_subarray_sum.rs"

[[bin]]
name = "find_k_closest_element"
path = "src/sliding_window/find_k_closest_element.rs"

## Binary Search

[[bin]]
name = "search_insert_position"
path = "src/bin_search/search_insert_position.rs"

[[bin]]
name = "guess_number_higher_lower"
path = "src/bin_search/guess_number_higher_lower.rs"

[[bin]]
name = "arranging_coins"
path = "src/bin_search/arranging_coins.rs"

[[bin]]
name = "sq_of_sorted_array"
path = "src/bin_search/sq_of_sorted_array.rs"

[[bin]]
name = "valid_perfect_square"
path = "src/bin_search/valid_perfect_square.rs"

[[bin]]
name = "sqrt_x"
path = "src/bin_search/sqrt_x.rs"

## Bit Manipulation 

[[bin]]
name = "shuffle_the_array"
path = "src/bit_manipulation/shuffle_the_array.rs"

[[bin]]
name = "add_to_array_form_of_int"
path = "src/bit_manipulation/add_to_array_form_of_int.rs"

[[bin]]
name = "add_binary"
path = "src/bit_manipulation/add_binary.rs"

[dependencies]
