[package]
name = "neet_code_all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## Array & Hashing

[[bin]]
name = "concatenation_of_array"
path = "src/array_hash/concatenation_of_array.rs"

[[bin]]
name = "replace_elements_with_greatest_right"
path = "src/array_hash/replace_elements_with_greatest_right.rs"

[[bin]]
name = "is_subsequence"
path = "src/array_hash/is_subsequence.rs"

[[bin]]
name = "len_of_last_word"
path = "src/array_hash/len_of_last_word.rs"

[[bin]]
name = "longest_common_prefix"
path = "src/array_hash/longest_common_prefix.rs"

[[bin]]
name = "pascal_triangle"
path = "src/array_hash/pascal_triangle.rs"

[[bin]]
name = "remove_element"
path = "src/array_hash/remove_element.rs"

[[bin]]
name = "unique_email_address"
path = "src/array_hash/unique_email_address.rs"

[[bin]]
name = "isomorphic_strings"
path = "src/array_hash/isomorphic_strings.rs"

[[bin]]
name = "can_place_flowers"
path = "src/array_hash/can_place_flowers.rs"

[[bin]]
name = "majority_element"
path = "src/array_hash/majority_element.rs"

[[bin]]
name = "next_greater_element_1"
path = "src/array_hash/next_greater_element_1.rs"

[[bin]]
name = "find_pivot_index"
path = "src/array_hash/find_pivot_index.rs"

[[bin]]
name = "range_sum_query_immutable"
path = "src/array_hash/range_sum_query_immutable.rs"

[[bin]]
name = "find_all_numbers_disappeared_in_array"
path = "src/array_hash/find_all_numbers_disappeared_in_array.rs"

[[bin]]
name = "max_number_of_ballons"
path = "src/array_hash/max_number_of_ballons.rs"

[[bin]]
name = "word_pattern"
path = "src/array_hash/word_pattern.rs"

[[bin]]
name = "design_hashset"
path = "src/array_hash/design_hashset.rs"

[[bin]]
name = "design_hashmap"
path = "src/array_hash/design_hashmap.rs"

[[bin]]
name = "sort_array"
path = "src/array_hash/sort_array.rs"

[[bin]]
name = "sort_colors"
path = "src/array_hash/sort_colors.rs"

[[bin]]
name = "encode_and_decode_tinyurl"
path = "src/array_hash/encode_and_decode_tinyurl.rs"

[[bin]]
name = "brick_wall"
path = "src/array_hash/brick_wall.rs"

[[bin]]
name = "best_time_to_buy_and_sell_2"
path = "src/array_hash/best_time_to_buy_and_sell_2.rs"

[[bin]]
name = "subarray_sum_eq_k"
path = "src/array_hash/subarray_sum_eq_k.rs"

[[bin]]
name = "unique_len_3_palindromic_substr"
path = "src/array_hash/unique_len_3_palindromic_substr.rs"

[[bin]]
name = "min_num_of_swaps"
path = "src/array_hash/min_num_of_swaps.rs"

[[bin]]
name = "num_of_interchangeable_rectangle"
path = "src/array_hash/num_of_interchangeable_rectangle.rs"

[[bin]]
name = "max_product_of_two_substr"
path = "src/array_hash/max_product_of_two_substr.rs"

[[bin]]
name = "grid_game"
path = "src/array_hash/grid_game.rs"

[[bin]]
name = "find_all_anagrams_in_string"
path = "src/array_hash/find_all_anagrams_in_string.rs"

[[bin]]
name = "find_index_of_first_occurrence_string"
path = "src/array_hash/find_index_of_first_occurrence_string.rs"

[[bin]]
name = "largest_number"
path = "src/array_hash/largest_number.rs"

[[bin]]
name = "continuous_subarray_sum"
path = "src/array_hash/continuous_subarray_sum.rs"

[[bin]]
name = "push_dominoes"
path = "src/array_hash/push_dominoes.rs"

[[bin]]
name = "repeated_dna_sequences"
path = "src/array_hash/repeated_dna_sequences.rs"

[[bin]]
name = "insert_delete_get_random"
path = "src/array_hash/insert_delete_get_random.rs"

[[bin]]
name = "string_contains_all_bin_code_size_k"
path = "src/array_hash/string_contains_all_bin_code_size_k.rs"

[[bin]]
name = "range_sum_query_2d"
path = "src/array_hash/range_sum_query_2d.rs"

[[bin]]
name = "non_decreasing_array"
path = "src/array_hash/non_decreasing_array.rs"

[[bin]]
name = "first_missing_positive"
path = "src/array_hash/first_missing_positive.rs"

[[bin]]
name = "sign_of_product_of_array"
path = "src/array_hash/sign_of_product_of_array.rs"

[[bin]]
name = "find_difference_of_two_arrays"
path = "src/array_hash/find_difference_of_two_arrays.rs"

[[bin]]
name = "design_parking_system"
path = "src/array_hash/design_parking_system.rs"

[[bin]]
name = "number_of_zero_filled_subarray"
path = "src/array_hash/number_of_zero_filled_subarray.rs"

[[bin]]
name = "optimal_partition_of_string"
path = "src/array_hash/optimal_partition_of_string.rs"

[[bin]]
name = "minimum_penalty_for_shop"
path = "src/array_hash/minimum_penalty_for_shop.rs"

## Two Pointers 

[[bin]]
name = "valid_palindrome_2"
path = "src/two_pointers/valid_palindrome_2.rs"

[[bin]]
name = "min_diff_highest_lowest_k_score"
path = "src/two_pointers/min_diff_highest_lowest_k_score.rs"

[[bin]]
name = "merge_strings_alternately"
path = "src/two_pointers/merge_strings_alternately.rs"

[[bin]]
name = "reverse_string"
path = "src/two_pointers/reverse_string.rs"

[[bin]]
name = "merge_sorted_array"
path = "src/two_pointers/merge_sorted_array.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array"
path = "src/two_pointers/remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "move_zeroes"
path = "src/two_pointers/move_zeroes.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array_2"
path = "src/two_pointers/remove_duplicates_from_sorted_array_2.rs"

[[bin]]
name = "four_sum"
path = "src/two_pointers/four_sum.rs"

[[bin]]
name = "number_of_sub_sequences"
path = "src/two_pointers/number_of_sub_sequences.rs"

[[bin]]
name = "rotate_array"
path = "src/two_pointers/rotate_array.rs"

[[bin]]
name = "array_with_not_eq_avg_of_neighbors"
path = "src/two_pointers/array_with_not_eq_avg_neighbors.rs"

[[bin]]
name = "boats_to_save_people"
path = "src/two_pointers/boats_to_save_people.rs"

## Sliding Window

[[bin]]
name = "contain_duplicate_2"
path = "src/sliding_window/contain_duplicate_2.rs"

[[bin]]
name = "num_of_subarray_size_k_avg_threshold"
path = "src/sliding_window/num_of_subarray_size_k_avg_threshold.rs"

[[bin]]
name = "freq_of_most_frequent_element"
path = "src/sliding_window/freq_of_most_frequent_element.rs"

[[bin]]
name = "fruits_into_basket"
path = "src/sliding_window/fruits_into_basket.rs"

[[bin]]
name = "max_num_of_vowels_k"
path = "src/sliding_window/max_num_of_vowels_k.rs"

[[bin]]
name = "min_number_of_flip_to_make_alternative"
path = "src/sliding_window/min_number_of_flip_to_make_alternative.rs"

[[bin]]
name = "min_size_subarray_sum"
path = "src/sliding_window/min_size_subarray_sum.rs"

[[bin]]
name = "find_k_closest_element"
path = "src/sliding_window/find_k_closest_element.rs"

[[bin]]
name = "minimum_operations_to_reduce_x_to_zero"
path = "src/sliding_window/minimum_operations_to_reduce_x_to_zero.rs"

## Stack 

[[bin]]
name = "baseball_game"
path = "src/stack/baseball_game.rs"

[[bin]]
name = "implement_stack_using_queues"
path = "src/stack/implement_stack_using_queues.rs"

[[bin]]
name = "removing_stars_from_string"
path = "src/stack/removing_stars_from_string.rs"

[[bin]]
name = "validate_stack_sequences"
path = "src/stack/validate_stack_sequences.rs"

[[bin]]
name = "asteroid_collision"
path = "src/stack/asteroid_collision.rs"

[[bin]]
name = "online_stock_span"
path = "src/stack/online_stock_span.rs"

[[bin]]
name = "simplify_path"
path = "src/stack/simplify_path.rs"

[[bin]]
name = "decode_string"
path = "src/stack/decode_string.rs"

[[bin]]
name = "remove_k_digits"
path = "src/stack/remove_k_digits.rs"

[[bin]]
name = "remove_all_adjacent_duplicates_in_string_2"
path = "src/stack/remove_all_adjacent_duplicates_in_string_2.rs"

[[bin]]
name = "132_pattern"
path = "src/stack/132_pattern.rs"

## Binary Search

[[bin]]
name = "search_insert_position"
path = "src/bin_search/search_insert_position.rs"

[[bin]]
name = "guess_number_higher_lower"
path = "src/bin_search/guess_number_higher_lower.rs"

[[bin]]
name = "arranging_coins"
path = "src/bin_search/arranging_coins.rs"

[[bin]]
name = "sq_of_sorted_array"
path = "src/bin_search/sq_of_sorted_array.rs"

[[bin]]
name = "valid_perfect_square"
path = "src/bin_search/valid_perfect_square.rs"

[[bin]]
name = "sqrt_x"
path = "src/bin_search/sqrt_x.rs"

[[bin]]
name = "single_element_in_sorted_array"
path = "src/bin_search/single_element_in_sorted_array.rs"

[[bin]]
name = "capacity_to_ship_pkg_within_days"
path = "src/bin_search/capacity_to_ship_pkg_within_days.rs"

[[bin]]
name = "find_peak_element"
path = "src/bin_search/find_peak_element.rs"

[[bin]]
name = "successful_pairs_spell_potion"
path = "src/bin_search/successful_pairs_spell_potion.rs"

[[bin]]
name = "minimize_max_diff_of_pairs"
path = "src/bin_search/minimize_max_diff_of_pairs.rs"

[[bin]]
name = "search_in_rotated_sorted_array_2"
path = "src/bin_search/search_in_rotated_sorted_array_2.rs"

[[bin]]
name = "find_first_and_last_in_sorted_array"
path = "src/bin_search/find_first_and_last_in_sorted_array.rs"

## Graphs 

[[bin]]
name = "island_perimeter"
path = "src/graphs/island_perimeter.rs"

[[bin]]
name = "verify_alien_dict"
path = "src/graphs/verify_alien_dict.rs"

[[bin]]
name = "count_sub_islands"
path = "src/graphs/count_sub_islands.rs"

[[bin]]
name = "reorder_routes_to_city_zero"
path = "src/graphs/reorder_routes_to_city_zero.rs"

[[bin]]
name = "snakes_and_ladders"
path = "src/graphs/snakes_and_ladders.rs"

[[bin]]
name = "open_the_lock"
path = "src/graphs/open_the_lock.rs"

## Math & Geometry

[[bin]]
name = "excel_sheet_column_title"
path = "src/math_and_geometry/excel_sheet_column_title.rs"

[[bin]]
name = "greatest_common_divisor_of_string"
path = "src/math_and_geometry/greatest_common_divisor_of_string.rs"

[[bin]]
name = "count_odd_number_in_interval"
path = "src/math_and_geometry/count_odd_number_in_interval.rs"

[[bin]]
name = "matrix_diagonal_sum"
path = "src/math_and_geometry/matrix_diagonal_sum.rs"

[[bin]]
name = "palindrome_number"
path = "src/math_and_geometry/palindrome_number.rs"

[[bin]]
name = "ugly_number"
path = "src/math_and_geometry/ugly_number.rs"

[[bin]]
name = "shift_2d_grid"
path = "src/math_and_geometry/shift_2d_grid.rs"

[[bin]]
name = "roman_to_integer"
path = "src/math_and_geometry/roman_to_integer.rs"

[[bin]]
name = "integer_to_roman"
path = "src/math_and_geometry/integer_to_roman.rs"

[[bin]]
name = "robot_bounded_in_circle"
path = "src/math_and_geometry/robot_bounded_in_circle.rs"

[[bin]]
name = "zigzag_conversion"
path = "src/math_and_geometry/zigzag_conversion.rs"

[[bin]]
name = "find_missing_observations"
path = "src/math_and_geometry/find_missing_observations.rs"

[[bin]]
name = "spiral_matrix_2"
path = "src/math_and_geometry/spiral_matrix_2.rs"

[[bin]]
name = "max_points_on_line"
path = "src/math_and_geometry/max_points_on_line.rs"

## Bit Manipulation 

[[bin]]
name = "shuffle_the_array"
path = "src/bit_manipulation/shuffle_the_array.rs"

[[bin]]
name = "add_to_array_form_of_int"
path = "src/bit_manipulation/add_to_array_form_of_int.rs"

[[bin]]
name = "add_binary"
path = "src/bit_manipulation/add_binary.rs"

[dependencies]
rand = "0.8.5"
