[package]
name = "impl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "graph_grid"
path = "src/graph/graph_grid.rs"

[[bin]]
name = "prefix_sum"
path = "src/prefix_sum/prefix_sum.rs"

[[bin]]
name = "bit_1"
path = "src/bit_manipulation/bit_1.rs"

[[bin]]
name = "bit_2"
path = "src/bit_manipulation/bit_2.rs"

[[bin]]
name = "flood_fill"
path = "src/graph/flood_fill.rs"

[[bin]]
name = "dfs_rec"
path = "src/graph/dfs_rec.rs"

[[bin]]
name = "graph_search_loop"
path = "src/graph/graph_search_loop.rs"

[[bin]]
name = "topo_sort"
path = "src/graph/topo_sort.rs"

[[bin]]
name = "or_insert"
path = "src/hash_map/or_insert.rs"

[[bin]]
name = "or_default"
path = "src/hash_map/or_default.rs"

[dependencies]
